Minor changes to Banality

--- a/Banality_of_Parasitism.Rmd
+++ b/Banality_of_Parasitism.Rmd
@@ -32,13 +32,13 @@ library(simecol) # for running model
 theme_set(theme_minimal())
 ```
 
-We often treat parasites as if they are these rare things that occasionally crop up and cause problems. An understandably so! Being sick is terrible. Epidemics bring illness and even death to many and pain to most. If only we could just get rid of these few nuisances, why, wouldn't the world be a better places? What I want to convince you of is that neither of these perspectives are right. Parasites are far from rare, and they usually do not cause the plagues we associate with them. Indeed, most of the time we pay them little thought. In other words, we should not think about parasitism as some special case where _something_ went wrong, but as the normal state of the world; common and even banal!
+We often treat parasites as if they are these rare things that occasionally crop up and cause problems. And understandably so! Being sick is terrible. Epidemics bring illness and even death to many and pain to most. If only we could just get rid of these few nuisances, why, wouldn't the world be a better places? What I want to convince you of is that neither of these perspectives are right. Parasites are far from rare, and they usually do not cause the plagues we associate with them. Indeed, most of the time we pay them little thought. In other words, we should not think about parasitism as some special case where _something_ went wrong, but as the normal state of the world; common and even banal!
 
 # Parasites are common!
 
 Parasitism is the most successful strategy or means of making a living. More common than photosynthesis, herbivory, or carnivory; perhaps more common than all of them combined!  That is because every single species on Earth has at least one species parasitizing it. From what I can tell we have never looked carefully at a species and _not_ found it being parasitized at least occasionally. Even parasites have parasites!^[These are often called hyper-parasites. There can even be hyper-hyper-parasites!] And many of these parasites specialize on just one or a few host species^[The question of why so many parasites are specialists while others are generalists is a very deep one, and fodder for a century of evolutionary biologists.]. The numbers work out such that nearly half of all species on earth are thought to be parasites. .
 
-Think about you. You have _huge_ numbers of things infecting you, even in this highly sanitized, carefully controlled world! You are host to myriad viruses, masses of bacteria, the occasional fungus (athlete's foot, yeast infections) or helminth (tapeworms, pinworm, roundworm), and perhaps lice or ticks on occasion or the rare apicomplexan (Babesia, Toxoplasma). And that's if you've been lucky and fairly healthy! The fact that we are infected by so _few_ parasites speaks to centuries of improved sanitation, food safety, and, to a small extent, medicine.   
+Think about you. You have _huge_ numbers of things infecting you, even in this highly sanitized, carefully controlled world! You are host to myriad viruses, masses of bacteria, the occasional fungus (athlete's foot, yeast infections) or helminth (tapeworms, pinworm, roundworm), and perhaps lice or ticks on occasion or the rare apicomplexan (_Babesia_, _Toxoplasma_). And that's if you've been lucky and fairly healthy! The fact that we are infected by so _few_ parasites speaks to centuries of improved sanitation, food safety, and, to a small extent, medicine.   
 
 Another way to think about it is that virtually every taxon has some members that we would think of as parasites. Sure, the microparasites like viruses^[A special case. We know of non-parasitic viruses.], bacteria, and fungi seem obvious, but we can find representatives in less obvious places, too! For instance, huge numbers of wasps are parasites, as are flies and fleas and bees. Plants like mistletoe and [Indian pipe](https://en.wikipedia.org/wiki/Myco-heterotrophy) are parasites of trees and mycorrhizal fungi, respectively. Cowbirds and cuckoos are brood parasites, laying their camouflaged eggs in the nest of some other species, who then take care of them like their own, even after these young parasites kick out of the nest their adopted siblings. One of my favorite examples is _[Sacculina](https://en.wikipedia.org/wiki/Sacculina)_, a genus of _barnacles_ (!) that parasitize and castrate crabs. Their larvae find a chink in the armor of a crab (e.g., at a joint) and then inject themselves into the crab, grow a large sac of developing eggs on the crab's thorax, where it's own eggs would be, and manipulates the host crab into taking care of this parasites eggs as if they were her own! What's more, if the barnacle gets onto a male crab it will feminize it and convince it that it is a pregnant female, too!  There are too many examples to do justice! 
 
@@ -65,16 +65,18 @@ While most parasite species do not play a major role in ecosystems, let alone in
 
 # But most parasites have fairly minor impacts on their hosts
 
-Let us return to the wealth of parasites making their living on and in us. There are...lots of them. More than I can count anyway. But, importantly, most of them do very little harm to us, at least most of the time. Consider [_Staphylococcus aureus_](https://en.wikipedia.org/wiki/Staphylococcus_aureus), a bacteria commonly known for horrendous skin infections, blood and bone infections, and food poisoning collectively linked to tens of thousands of deaths a year in the U.S.A. It's is much more commonly a normal part of the skin and even gut microbiota. Why does this normal, largely benign commensal occasionally kill people? The short answer is that context matters. Yes, there are more virulent types that have one way or another picked up the genetic capacity to secrete enzymes, toxins, and more that can turn them from potentially harmful to outright dangerous^[Bacteria are famously, ah...permissive of sharing mobile genetic elements, recombination, and so on.  Many are the experiments where the pathogenic bacteria fails to cause any damage because it somehow lost its plasmid with virulence factors.]. But more broadly, staph tends to be an opportunistic infection. It cannot pierce your skin or mucosal membranes itself, most of the time. Indeed, it is quite fine making a living on your surfaces. But given the opportunity it may well enter a wound or scrape and start to grow; it's a nice warm, wet, nutrient rich environment, after all! If the host's immune system is not able to control its growth, well that's where the problems lay. 
+Let us return to the wealth of parasites making their living on and in us. There are...lots of them. More than I can count anyway. But, importantly, most of them do very little harm to us, at least most of the time. Consider [_Staphylococcus aureus_](https://en.wikipedia.org/wiki/Staphylococcus_aureus), a bacteria commonly known for horrendous skin infections, blood and bone infections, and food poisoning collectively linked to tens of thousands of deaths a year in the U.S.A. It is much more frequently a normal part of the skin and even gut microbiota. Why does this normal, largely benign commensal occasionally kill people? The short answer is that context matters. Yes, there are more virulent types that have one way or another picked up the genetic capacity to secrete enzymes, toxins, and more that can turn them from potentially harmful to outright dangerous^[Bacteria are famously, ah...permissive of sharing mobile genetic elements, recombination, and so on.  Many are the experiments where the pathogenic bacteria fails to cause any damage because it somehow lost its plasmid with virulence factors.]. But more broadly, staph tends to be an opportunistic infection. It cannot pierce your skin or mucosal membranes itself, most of the time. Indeed, it is quite fine making a living on your surfaces. But given the opportunity it may well enter a wound or scrape and start to grow; it's a nice warm, wet, nutrient rich environment, after all! If the host's immune system is not able to control its growth, well that's where the problems lay. 
 
-This example highlights two important points. First, the interactions that parasites have on their hosts (and vice versa) should be considered along a spectrum, from benign (or even helpful!) to harmful. Focusing on the effect of the symbiosis^[From Latin from the Greek sumbiōsis ‘a living together’, from , from sumbios ‘companion’. The word more precisely means two different organisms living in close physical proximity. While the relationship is often thought of as mutually advantageous, it need not be the case.] on the host^[We focus on the host, because if the symbiont is not getting some advantage by being in or on the host, why is it there? In truth, however, there are cases where the relationship is neutral for both parties, which we call an amensalism or neutralism. But now we're splitting hairs.], we would call one that benefited the host a mutualism (both are doing well), one that is neutral for the host an commensalism, and one that is detrimental for the host a parasitism. What do we mean by beneficial or detrimental? Well, technically we would focus on the net change in the host's fitness, in the evolutionary sense of the word. So a loss of reproduction is just as detrimental as a loss of life! A reduction in growth or an increase in predation risk would also be detrimental. Moreover, from this perspective the annoying cold or athlete's foot that have no real fitness costs might be better thought of a commensalism, or nearly so.
+## Parasitism on the spectrum
+This example highlights two important points. First, the effects that parasites have on their hosts (and vice versa) should be considered along a spectrum, from benign (or even helpful!) to harmful. Focusing on the effect of the symbiont^[From Latin from the Greek sumbiōsis ‘a living together’, from , from sumbios ‘companion’. Symbiosis means two different organisms living in close physical proximity. While the relationship is often thought of as mutually advantageous, it need not be the case.] on the host^[We focus on the host, because if the symbiont is not getting some advantage by being in or on the host, why is it there? In truth, however, there are cases where the relationship is neutral for both parties, which we call an amensalism or neutralism. But now we're splitting hairs.], we would call one that benefited the host a mutualism (both are doing well), one that is neutral for the host an commensalism, and one that is detrimental for the host a parasitism. What do we mean by beneficial or detrimental? Well, technically we would focus on the net change in the host's fitness, in the evolutionary sense of the word. So a loss of reproduction is just as detrimental as a loss of life! A reduction in growth or an increase in predation risk would also be detrimental. Moreover, from this perspective the annoying cold or athlete's foot that have no real fitness costs might be better thought of a commensalism, or nearly so.
 
 Indeed, in this view, most parasites are commensals, or at least nearer the center than the parasitic extreme, most of the time. Trust me, you are far from aware of the myriad viruses you are constantly playing reluctant host to and, indeed, fighting off. Measuring their impact on host fitness would be a difficult endeavor. The British colonial governments, bless their misguided hearts, conducted a great deal of research trying to sort out the impacts of (macro)parasite infections on their laborers and other subjects and found costs (to production!), but they were often quite subtle. What is the point? Well, it is important to realize in a bone-deep way that it is difficult if not impossible to have clear cut-offs between these categorical terms we use, even for parasites. And, again, parasitism is incredibly commonplace and the vast majority of the time, pretty invisible.
 
-The second point from our example of _S. aureus_ is that these symbiotic associations can be quite fluid depending on context. These bacteria happily make a living on the skin of many people, primarily digesting dead skin and whatever else is available. If it gets into a cut in your skin and continues to digest whatever is available, it hasn't changed, but the nature of the relationships has; you now have a pus-filled wound^[The pus is mostly white blood cells attacking the bacteria.]. Similarly, _Candidia albicans_ is a normally commensal yeast found in the gut flora of roughly half of human adults. It is also an important cause of vaginal yeast infections and thrush, but can even cause systemic infections. In what populations is most commonly observed causing problematic infections? The very young, the very old, and the otherwise immunocompromised (e.g., those undergoing chemotherapy, AIDS patients). Sure, these are opportunistic parasites, but the same context dependence is also common in obligate parasites.
+## Symbioses are fluid
+The second point from our example of _S. aureus_ is that symbiotic associations can be quite fluid depending on context. These bacteria happily make a living on the skin of many people, primarily digesting dead skin and whatever else is available. If it gets into a cut in your skin and continues to digest whatever is available, it hasn't changed, but the nature of the relationships has; you now have a pus-filled wound^[The pus is mostly white blood cells attacking the bacteria.]. Similarly, _Candidia albicans_ is a normally commensal yeast found in the gut flora of roughly half of human adults. It is also an important cause of vaginal yeast infections and thrush, but can even cause systemic infections. In what populations is most commonly observed causing problematic infections? The very young, the very old, and the otherwise immunocompromised (e.g., those undergoing chemotherapy, AIDS patients). Sure, these are opportunistic parasites, but the same context dependence is also common in obligate parasites.
 
 Tapeworms cause little damage to many if not most hosts^[They were even [sold for weight loss](https://en.wikipedia.org/wiki/Cestoda#Interactions_with_humans)!], but they are very problematic for undernourished hosts. _Very_ light infections with hookworms (e.g., _Necator americanus_) can cause little if any notable pathology (and some think they, and similar helminth infections, prevent autoimmune disorders), but at higher doses they cause severe anemia and worse. And of course the severity of many respiratory virus infections often depends on the extent of the host's immune response (e.g., the cytokine storm that causes such severe pathology in some influenza cases). 
 
-Many things push a relatively benign symbiosis towards a more parasitic interaction (or vice versa). Conditions like temperature are very important for infections in ectotherms. Nutrient and energetic status of the host is often important. So are immune status (think immunocompromised vs. tolerant hosts) and the presence of other organisms. We will discuss some of these factors, but honestly, the range of important factors span the whole of immunology and physiology and nutrition and ecology. Suffice to say, what may clearly be a parasite in one context may be a commensal or even a mutualist in another. 
+Many things push a relatively benign symbiosis towards a more parasitic interaction (or vice versa). Conditions like temperature are very important for infections in ectotherms. Nutrient and energetic status of the host is often important^[One cool example comes from mycorrhizal fungi who typically provide hard-to-get nutrients, such as phosphorus, to their hosts plants, who in return provide sugars. What happens if you fertilize the plant with phosphorus? It stops giving the myrorrhizae sugars and may even kick them out. What were once key business partners suddenly became free-loading parasites! (See, for instance, [Kiers et al. 2011. Reciprocal rewards stabilize cooperation in the mycorrhizal symbiosis. Science 333:880-882.](https://www.researchgate.net/publication/51566071_Reciprocal_Rewards_Stabilize_Cooperation_in_the_Mycorrhizal_Symbiosis))]. Dose and immune status (think immunocompromised vs. tolerant hosts) and the presence of other organisms can all change the nature of a symbiotic relationship. We will discuss some of these factors, but honestly, the range of important factors span the whole of immunology and physiology and nutrition and ecology. Suffice to say, what may clearly be a parasite in one context may be a commensal or even a mutualist in another. 
 
-Let me close by returning to the notion that parasites are rare, but harmful organisms that we (thankfully) rarely deal with. I hope I have convinced you that while we can certainly find some impressively harmful (and [odd](https://en.wikipedia.org/wiki/Cymothoa_exigua)!) parasites, these comprise a very small portion of parasite diversity. Parasites are all around and in us most all the time. They usually cause little obvious harm to us or the animals we care about, at least most of the time. This might be attributed in some degree to our amazing immune systems, capable of wrangling myriad intruders without us even noticing, and to a degree to the fact that parasites usually have little interest in causing us harm. Indeed, their more important adversaries are often their co-infecting symbiotic neighbors or the harsh environment away from the host. In the end, parasitism is simply a very common way of making a living in the world. It can be hugely important for hosts and populations and even ecosystems, but more often, it is quite banal. 
+`r newthought('Let me close')`  by returning to the notion that parasites are rare, but harmful organisms that we (thankfully) rarely deal with. I hope I have convinced you that while we can certainly find some impressively harmful (and [odd](https://en.wikipedia.org/wiki/Cymothoa_exigua)!) parasites, these comprise a very small portion of parasite diversity. Parasites are all around and in us most all the time. They usually cause little obvious harm to us or the animals we care about, at least most of the time. This might be attributed in some degree to our amazing immune systems, capable of wrangling myriad intruders without us even noticing, and to a degree to the fact that parasites usually have little interest in causing us harm. Indeed, their more important adversaries are often their co-infecting symbiotic neighbors or the harsh environment away from the host. In the end, parasitism is simply a very common way of making a living in the world. It can be hugely important for hosts and populations and even ecosystems, but more often, it is quite banal. 
