--- a/Tradeoffs.Rmd
+++ b/Tradeoffs.Rmd
@@ -3,7 +3,7 @@ title: "Trade-offs"
 subtitle: "You just can't do everything you want all the time"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintHtml
+output: tint::tintPdf
 latexfonts:
   - package: newtxmath
     options: 
@@ -46,9 +46,9 @@ knitr::include_graphics("Pick2.png", dpi=600)
 
 Go into any programmers' cubicle farm and you are almost guaranteed to see some version of this diagram. Yes, yes, it's sort of funny, but more importantly, there's a deeper wisdom here. In short, when there is a limited resource---resources, energy, time---then you cannot have it all. You need to prioritize one thing at the cost of another^[Or, as the aphorism goes, "you aren't prioritizing if you aren't saying no."].
 
-It is worth noting that _something_ is virtually always limiting, in all sorts of contexts. A public health department has a limited budget, a busy student has limited time (or attention), and a growing _Daphnia_ has only so much energy and resources. It is worth noting that the limiting resource can be information, too! Remember that diagnostic tests could gain specificity at the cost of sensitivity, and vice versa. There is only so much information in a diagnostic test, and you so you bias it one way or the other. 
+It is worth noting that _something_ is virtually always limiting, in all sorts of contexts. A public health department has a limited budget, a busy student has limited time (or attention), and a growing _Daphnia_ has only so much energy and resources. It is worth noting that the limiting resource can be information, too! Remember that diagnostic tests could gain specificity at the cost of sensitivity, and vice versa. There is only so much information in a diagnostic test. You can use that information to be improve the ability to discern truly infected individuals (i.e., diagnostic sensitivity), but that comes at the cost of being less certain about the status of negatives  (reduced specificity). 
 
-It is also worth nothing that there are almost always competing interests. The public health department needs to educate health care workers, government officials, and the general public about health threats in hopes of preventing disease;  test for a wide range of infectious and non-infectious diseases, collect data on current trends in disease incidence for numerous sources; and devise and implement responses to improve public health^[And this is the course-level of their duties!]. A _Daphnia_ invests its limited energy and resources among growth, maintenance (e.g., anti predator defenses & behaviors, foraging, etc.), and reproduction^[I assume you know the many competing interests of the time and attention of a busy student!].      
+It is also worth noting that there are almost always competing interests. The public health department needs to educate health care workers, government officials, and the general public about health threats in hopes of preventing disease;  test for a wide range of infectious and non-infectious diseases, collect data on current trends in disease incidence for numerous sources; and devise and implement responses to improve public health^[And this is the course-level of their duties!]. A _Daphnia_ invests its limited energy and resources among growth, maintenance (e.g., anti predator defenses & behaviors, foraging, etc.), and reproduction^[I assume you know the many competing interests of the time and attention of a busy student!].      
 
 # Optimal _Daphnia_ and more
 
@@ -65,11 +65,11 @@ Before we get tied in knots thinking about what an optimal _Daphnia_ (or any oth
 Second, and relatedly, what is "optimal" depends on context. Are you liable to be eaten by a predator any day now? Well, reproducing sooner than later seems like a good plan. Can you expect to have more resources in the future to take good care of your young and thus ensure their survival? That seems like a good bet. In short, only when given something to maximize _and_ a context can we perhaps predict what should be optimal.   
 
 
-# Marginal value or diamond--water paradox
+# Marginal value or the diamond--water paradox
 
 One of the key insights in many fields of study is that trade-offs between two things of value do _not_ mean a simple one-to-one relationships or even a constant ratio (e.g., a dollar towards smoking prevention is worth five towards smoking cessation). Instead, the value of an investment depends on context (as we've just noted) and how much you already have of the thing(s) you might invest in.
 
-Consider a classic economic paradox, called the [paradox of value](https://en.wikipedia.org/wiki/Paradox_of_value). Water is an essential resource for life, yes? But diamonds, which are not particularly useful outside of some industrial processes, are much, much more expensive! You can get a gallon of water for a dollar at the store or pennies from your tap at home. Indeed, you can get it for free at any drinking fountain. Diamonds, on the other hand, cost ridiculous amounts^[And [lose much](https://www.huffpost.com/entry/diamonds-are-bullshit_b_3708562) of [their value](https://99percentinvisible.org/episode/diamonds-articles-of-interest-11/) as soon as you walk out of the store. ]Why is that?^[I recommend this [Planet Money](https://www.npr.org/sections/money/2018/07/25/632473671/the-diamond-water-paradox) story; it's far more entertaining that most accounts.]  
+Consider a classic economic paradox, called the [paradox of value](https://en.wikipedia.org/wiki/Paradox_of_value). Water is an essential resource for life, yes? But diamonds, which are not particularly useful outside of some industrial processes, are much, much more expensive! You can get a gallon of water for a dollar at the store or pennies from your tap at home. Indeed, you can get it for free at any drinking fountain. Diamonds, on the other hand, cost ridiculous amounts^[And [lose much](https://www.huffpost.com/entry/diamonds-are-bullshit_b_3708562) of [their value](https://99percentinvisible.org/episode/diamonds-articles-of-interest-11/) as soon as you walk out of the store. ]. Why is that?^[I recommend this [Planet Money](https://www.npr.org/sections/money/2018/07/25/632473671/the-diamond-water-paradox) story; it's far more entertaining that most accounts.]  
 
 The simple version is that you have enough water already. If you were, say, dying of thirst you would probably pay a lot for that first gallon of water! You'd probably happily give up all your diamonds (or as the ridiculous advertisement say, "[three months salary](https://www.bbc.com/news/magazine-27371208)") for enough water not to die! I know I would!  You'd probably even pay a lot for the second and third gallon. But by the 5th it might be less advantageous. You'd have to carry it or store it, which is inconvenient. By the 10th or 1000th you probably wouldn't pay much at all. That is to say, that the _marginal_ value, the value of each extra gallon of water, starts out very high, but declines pretty quickly.  Diamonds, on the other hand are worth about the same whether you have one or ten, if you're a diamond person; their marginal value declines much more slowly. 
 
@@ -82,7 +82,7 @@ Once you start thinking about trade-offs, you see them everywhere. Here are a fe
 
 Public health is the medical land of trade-offs. Not that individual medicine doesn't involve trade-offs (name brand or generic?), but when it comes to populations you are always pitting one group's interests against another's. There is no way those people get paid enough!
 
-*   One thing we heard a lot in this current COVID-19 pandemic is that the cure might worse than the disease. While this was often used to denigrate even basic public health interventions, there is an important point that should not get lost in the political back-and-forth. Keeping people home from schools and work has real costs. Kids get a _lot_ out of being at school, from a better education to necessary social interactions to free lunches and other services. Keeping them home might reduce their risk of getting COVID-19, but it comes at a cost. Sometimes these costs clearly outweigh the benefits, though it can be difficult to know^[I highly recommend [this podcast](https://overcast.fm/+U9ZGRpCww) on the costs of interventions, like closing trains down until all of the rails were checked for problems after a train crash or moving people out of the danger zone around the Fukushima Daiichi nuclear accident. ]. 
+*   One thing we heard a lot in this current COVID-19 pandemic is that the cure might be worse than the disease. While this was often used to denigrate even basic public health interventions, there is an important point that should not get lost in the political back-and-forth. Keeping people home from schools and work has real costs. Kids get a _lot_ out of being at school, from a better education to necessary social interactions to free lunches and other services. Keeping them home might reduce their risk of getting COVID-19, but it comes at a cost. Sometimes these costs clearly outweigh the benefits, though it can be difficult to know^[I highly recommend [this podcast](https://overcast.fm/+U9ZGRpCww) on the costs of interventions, like closing trains down until all of the rails were checked for problems after a train crash or moving people out of the danger zone around the Fukushima Daiichi nuclear accident. ]. 
 *   Recommendations for when and who to screen for various cancers (e.g., with mammograms, colonoscopies, etc.) often involve a trade-off between the costs---including the monetary costs, but also those of unnecessary worry, treatment, and surgeries that comes from false positives---and the costs of not finding these cancers early enough to intervene. Vaccines, too, involves trade-offs. There are side-effects and costs to vaccination. Are those costs outweighed by the reduced disease burden on the population?
 *  Chickens, pigs, and cattle are often culled to prevent the spread of disease between places or into humans. There is a clear economic cost to culling and often an uncertain benefit (would the disease really have spread?). This area is rife with trade-offs.  
 
